syntax = "proto3";
package nl2sql;
option csharp_namespace = "Nl2Sql.Api.Services";

service Translator {
  rpc TranslateToSql(TranslateToSqlRequest) returns (TranslateToSqlResponse);
};

message TranslateToSqlRequest {
  string query = 1;
  string database_schema = 2;
  string database_provider = 3;
};

message TranslateToSqlResponse {
  string sql = 1;
};
